--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,10 +29,7 @@ input, button:hover, button:focus {
     background: #bcb2bf;
 }
 
-
-
-
-
+/** Main options */
 .c-options {
     position: absolute;
     display: flex;
@@ -57,16 +54,30 @@ input, button:hover, button:focus {
     margin-bottom: 24px
 }
 
+/** Controls for each option export */
+.c-controls {
+    margin-top: 16px;
+    display: flex;
+    justify-content: space-between;
+    grid-gap: 1em;
+}
+    .c-controls .edit {
+        display: flex;
+        grid-gap: 1em;
+    }
 
+/* Hide the actual export container as it's too big to display on a mobile screen */
+.export-hiding-wrap {
+    width: 0;
+    height: 0;
+    overflow: hidden;
+}
 
-
-
-
-
-.c-upload-form {
+/** Pass image */
+.c-pass-container .c-upload-form {
     width: 100%;
 }
-.file-upload
+.c-pass-container .file-upload
 {
     display: block;
     width: 100%;
@@ -77,7 +88,7 @@ input, button:hover, button:focus {
     cursor: pointer;
 }
 
-.--output-container {
+.c-pass-container .--output-container {
     background-image: linear-gradient(45deg, #e4e4e4 25%, transparent 25%), linear-gradient(-45deg, #e4e4e4 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #e4e4e4 75%), linear-gradient(-45deg, transparent 75%, #e4e4e4 75%);
     background-size: 20px 20px;
     background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
@@ -86,7 +97,7 @@ input, button:hover, button:focus {
     position: relative;
 }
 
-.c-pass-image-output-container
+.c-pass-container .pass-output
 {
     height: 1080px;
     width: 1080px;
@@ -94,78 +105,34 @@ input, button:hover, button:focus {
     overflow: hidden;
 }
 
-.image {
+.c-pass-container .image {
     width: 100%;
     height: 100%;
     object-fit: cover;
     transform: scale(1);
 }
 
-.c-frame {
+.c-pass-container .c-frame {
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
 }
-    .c-frame img {
+    .c-pass-container .c-frame img {
         display: block;
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
 
-/* Hide the actual export container as it's too big to display on a mobile screen */
-.export-hiding-wrap ,
-.c-export-container-instagram {
-    width: 0;
-    height: 0;
-    overflow: hidden;
-}
-/*
-.c-export-container-instagram .c-frame {
-    height: 200px;
-    padding: 0 64px;
-}
-.c-export-container-instagram .c-frame .logo .name 
-{
-    font-size: 68px;
-}
-.c-export-container-instagram .c-frame .logo .sub 
-{
-    font-size: 28px;
-}
-.c-export-container-instagram .c-frame .logo .name 
-{
-    font-size: 68px;
-}
-*/
-.c-preview-container-instagram {
-    max-width: 1080px;
-    aspect-ratio: 1/1;
-    position: relative;
-}
-
-.c-controls {
-    margin-top: 16px;
-    display: flex;
-    justify-content: space-between;
-    grid-gap: 1em;
-}
-.c-controls .edit {
-    display: flex;
-    grid-gap: 1em;
-}
-
-.--hidden {
-    display: none;
-}
+    .c-pass-container .pass-preview {
+        max-width: 1080px;
+        aspect-ratio: 1/1;
+        position: relative;
+    }
 
 
-
-
-
-
-
+/** Testimonial */
 .c-testimonial-container {
     max-width: 1080px;
     aspect-ratio: 1/1;
@@ -248,3 +215,9 @@ input, button:hover, button:focus {
             height: 220px;
             padding-bottom: 50px;
         }
+
+
+
+.--hidden {
+    display: none;
+}
